--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,58 +1,45 @@
 version: 2.1
+
 executors:
-  docker-publisher:
-    environment:
-      IMAGE_NAME: akisakye/useless-calculator
+  docker-executor:
     docker:
-      - image: cimg/python:3.10.1
+      - image: circleci/python:3.10
+
 jobs:
-  build:
-    executor: docker-publisher
+  build-and-push:
+    executor: docker-executor
     steps:
+      # Step 1: Checkout the code
       - checkout
       - setup_remote_docker
       - run:
-          name: Build Docker image
-          command: |
-            docker build -t $IMAGE_NAME:latest .
-      - run:
-          name: Archive Docker image
-          command: docker save -o image.tar $IMAGE_NAME
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./image.tar
-  publish-latest:
-    executor: docker-publisher
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - setup_remote_docker
-      - run:
-          name: Load archived Docker image
-          command: docker load -i /tmp/workspace/image.tar
-      - run:
-          name: Publish Docker Image to Docker Hub
+          name: Authenticate with Docker Hub
           command: |
             echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$(echo $CIRCLE_SHA1 | cut -c -7)
-            docker push $IMAGE_NAME:latest
-            docker push $IMAGE_NAME:$(echo $CIRCLE_SHA1 | cut -c -7)
+
+      # Step 3: Build the Docker image
+      - run:
+          name: Build Docker Image
+          command: |
+            docker build -t $DOCKERHUB_USERNAME/useless-calculator:latest .
+            docker images
+            docker tag $DOCKERHUB_USERNAME/useless-calculator:latest $DOCKERHUB_USERNAME/useless-calculator:$(echo $CIRCLE_SHA1 | cut -c -7)
+
+      # Step 4: Push the Docker image to Docker Hub
+      - run:
+          name: Push Docker Image to Docker Hub
+          command: |
+            docker push $DOCKERHUB_USERNAME/useless-calculator:latest
+            docker push $DOCKERHUB_USERNAME/useless-calculator:$(echo $CIRCLE_SHA1 | cut -c -7)
+
 workflows:
   version: 2
-  build-master:
+  build-and-deploy:
     jobs:
-      - build:
+      - build-and-push:
           context:
             - dockerhub
           filters:
             branches:
               only: main
-      - publish-latest:
-          context:
-            - dockerhub
-          requires:
-            - build
-          filters:
-            branches:
-              only: main
+
