--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
-anyio==3.4.0
-asgiref==3.4.1
-certifi==2021.10.8
-charset-normalizer==2.0.9
-click==8.0.3
-fastapi==0.70.1
-h11==0.12.0
-idna==3.3
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-pydantic==1.8.2
-python-multipart==0.0.5
-requests==2.26.0
-six==1.16.0
-sniffio==1.2.0
-starlette==0.16.0
-typing_extensions==4.0.1
-urllib3==1.26.7
-uvicorn==0.16.0
+annotated-types==0.7.0
+anyio==4.7.0
+asgiref==3.8.1
+build==1.2.2.post1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+fastapi==0.115.6
+h11==0.14.0
+idna==3.10
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+packaging==24.2
+pip-tools==7.4.1
+pydantic==2.10.3
+pydantic_core==2.27.1
+pyproject_hooks==1.2.0
+python-multipart==0.0.19
+requests==2.32.3
+six==1.17.0
+sniffio==1.3.1
+starlette==0.41.3
+typing_extensions==4.12.2
+urllib3==2.2.3
+uvicorn==0.32.1
