--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
-annotated-types==0.7.0
-anyio==4.7.0
-asgiref==3.8.1
-build==1.2.2.post1
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
+# Core dependencies
 fastapi==0.115.6
-h11==0.14.0
-idna==3.10
-Jinja2==3.1.4
-MarkupSafe==3.0.2
-packaging==24.2
-pip-tools==7.4.1
-pydantic==2.10.3
-pydantic_core==2.27.1
-pyproject_hooks==1.2.0
+uvicorn[standard]==0.32.1
+jinja2==3.1.4
 python-multipart==0.0.19
 requests==2.32.3
-six==1.17.0
-sniffio==1.3.1
-starlette==0.41.3
-typing_extensions==4.12.2
-urllib3==2.2.3
-uvicorn==0.32.1
+
+# Testing
+pytest==8.3.0
+httpx==0.27.0
+
+# Optional cloud telemetry dependencies
+# Uncomment these if you need cloud telemetry support:
+# For AWS CloudWatch
+#boto3==1.34.0  
+
+# For Azure Monitor with HTTP instrumentation
+# azure-monitor-opentelemetry
+# azure-identity==1.23.1
+# azure-mgmt-monitor==6.0.2
+# azure-monitor-opentelemetry-exporter==1.0.0b40
+# opentelemetry-sdk==1.31.1
+# opentelemetry-api==1.31.1
+# opentelemetry-instrumentation-fastapi
+# opentelemetry-instrumentation-requests
+# opentelemetry-instrumentation-urllib3
+# opentelemetry-instrumentation-httpx
